# SQLite-TUI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
Documents/: Feature_implementation.md  Priority_file.md
src/: app.rs  db.rs  main.rs  ui.rs
